--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <p>
             <marquee><h1>I did my LAB-1 Homework!</h1></marquee>
         </p>
+        
+        <img src="lab1.jpg">
     </body>
 </html>
